RESOLVED FIXED96632
[GTK] "Infinite" loop in AccessibilityUIElementGtk.cpp
https://bugs.webkit.org/show_bug.cgi?id=96632
Summary [GTK] "Infinite" loop in AccessibilityUIElementGtk.cpp
Sergio Villar Senin
Reported 2012-09-13 04:43:43 PDT
The problem is that getChildren() calls childrenCount() which uses getChildren() causing a never ending recursive loop.
Attachments
Patch proposal (2.54 KB, patch)
2012-09-13 04:49 PDT, Mario Sanchez Prada
no flags
Sergio Villar Senin
Comment 1 2012-09-13 04:47:37 PDT
BTW fixing this would be great as this is causing ~100 crashes in the WK2 bot
Mario Sanchez Prada
Comment 2 2012-09-13 04:49:22 PDT
Created attachment 163841 [details] Patch proposal Here is the simple patch. Sorry for the hassle, and feel free to set cq+ when reviewing it (if approved)
WebKit Review Bot
Comment 3 2012-09-13 05:11:13 PDT
Comment on attachment 163841 [details] Patch proposal Clearing flags on attachment: 163841 Committed r128447: <http://trac.webkit.org/changeset/128447>
WebKit Review Bot
Comment 4 2012-09-13 05:11:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.