[GTK] "Infinite" loop in AccessibilityUIElementGtk.cpp https://bugs.webkit.org/show_bug.cgi?id=96632

Patch by Mario Sanchez Prada <msanchez@igalia.com> on 2012-09-13
Reviewed by Carlos Garcia Campos.

Fix this by using atk_object_get_n_accessible_children instead of
calling getChildren() from childCount.

* WebKitTestRunner/InjectedBundle/gtk/AccessibilityUIElementGtk.cpp:
(WTR::AccessibilityUIElement::childrenCount): Avoid the infinite
loop by using atk_object_get_n_accessible_children().

Canonical link: https://commits.webkit.org/114533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128447 268f45cc-cd09-0410-ab3c-d52691b4dbfc